@@ -1,5 +1,12 @@
 2007-11-19  Dan Williams  <dcbw@redhat.com>
 
+	* src/applet.c
+		- (nag_dialog_response_cb, wireless_dialog_response_cb): fix possible
+			infinite loop of the no-CA-cert nag dialog when not permanently
+			ignoring the warning
+
+2007-11-19  Dan Williams  <dcbw@redhat.com>
+
 	* src/wireless-security/eap-method-peap.c
 	  src/wireless-security/eap-method-ttls.c
 		- (nag_dialog_response_cb): fix copy & paste error causing segfaults
